Update King.java